# ALineMol

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  build_docs.py  environment.yml  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  run.sh  run_example.sh  run_inference.sh  run_tests.py  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ALineMol/hyper/: __init__.py  hyper.py
ALineMol/splitters/: __init__.py  splits.py
ALineMol/utils/: __init__.py  metric_utils.py  plot_utils.py  split_utils  split_utils.py  utils.py
alinemol/: __init__.py  _version.py
alinemol/hyper/: __init__.py  hyper.py
alinemol/models/: cml.py  fragGNN.py  layers.py
alinemol/models/model_configures/: LightGBM.json  README.md  SVM.json  XGB.json  kNN.json  randomForest.json
alinemol/preprocessing/: __init__.py  standardizer.py
alinemol/splitters/: __init__.py  analyzer.py  analyzer_plots.py  base.py  butina_split.py  factory.py  scaffold_kmeans_split.py  splits.py  splitting_configures.py  umap_split.py  wrappers.py
alinemol/splitters/datasail/: __init__.py  datasail_split.py  utils.py
alinemol/splitters/lohi/: __init__.py  hi.py  lo.py  utils.py
alinemol/utils/: __init__.py  graph_utils.py  logger_utils.py  metric_utils.py  plot_utils.py  split_utils.py  training_utils.py  typing.py  utils.py
api/: models.html  preprocessing.html  splitters.html  utils.html
assets/tables/: ML_GNN_comparison.tex  ML_models.tex  Model_comparison.tex  datasets_size_activity.tex  datasets_stats.tex  shared.tex  slope.tex
datasets/: config.yml  dev_config.yml
docs/: index.md
docs/api/: models.md  preprocessing.md  splitters.md  utils.md
notebooks/: colab_splitter_quickstart.ipynb  dev.ipynb  example.ipynb  poster.ipynb  tabels.ipynb  visualization.ipynb
scripts/: Analysis.py  analyze_splits.py  calculate_distance.py  classification_inference.py  classification_train.py  clf_inference_gnn.py  clf_inference_ml.py  clf_train_gnn.py  clf_train_ml.py  mol_analysis.py  regression_inference.py  regression_train.py  split_config_template.yaml  splitting.py  splitting_testing.py
search/: search_index.json
tests/: conftest.py
tests/conftest/: dili.csv  dili_standardized.csv
tests/preprocessing/: test_standardizer.py
tests/splitters/: test_analyzer.py  test_base.py  test_butina_split.py  test_datasail.py  test_factory.py  test_lohi.py  test_scaffold_kmeans_split.py  test_splito.py  test_splits.py  test_umap_split.py  test_unified_api.py
tests/utils/: test_graph_utils.py  test_metric_utils.py  test_split_utils.py  test_utils.py
