[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ALineMol"
authors = [
    {name="Hosein Fooladi", email="fooladi.hosein@gmail.com"}
]
description = "Package for evaluating accuracy and agreement on the line for molecules"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

dynamic = ["version"]


[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
dev = [
  "black",
  "ruff",
  "pre-commit",
  "mypy",
]

[project.urls]
homepage = "https://github.com/HFooladi/ALineMol"
bug_tracker = "https://github.com/HFooladi/ALineMol/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["alinemol"]


[tool.setuptools_scm]
write_to = "alinemol/_version.py"

[tool.black]
line-length = 120
target-version = ["py39", "py310"]

[tool.ruff]
lint.ignore = [
    "E501",  # Never enforce `E501` (line length violations).
]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # imported but unused
    "E402",  # Module level import not at top of file
]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial"
]
testpaths = ["tests"]
addopts = "--cov=alinemol --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false