[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "ALineMol"
dynamic = ["version"]
authors = [
    {name="Hosein Fooladi", email="fooladi.hosein@gmail.com"}
]
description = "Package for evaluating accuracy and agreement on the line for molecules"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy<2",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "statsmodels",
    "torch>=1.13,<2.2",
    "dgl",
    "dgllife",
    "torch-geometric",
    "networkx",
    "POT",
    "joblib-progress",
    "rdkit",
    "datamol",
    "astartes",
    "splito",
    "datasail",
    "umap-learn",
    "mip",
    "tqdm",
    "loguru",
    "pyyaml",
    "typing-extensions",
]
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
dev = [
  "black",
  "ruff",
  "pre-commit",
  "mypy",
]

[project.urls]
homepage = "https://github.com/HFooladi/ALineMol"
bug_tracker = "https://github.com/HFooladi/ALineMol/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]
version-file = "alinemol/_version.py"
tag-pattern = "v[0-9]*"

[tool.hatch.build.targets.wheel]
packages = ["alinemol"]

[tool.hatch.build]
only-packages = true

[tool.black]
line-length = 120
target-version = ["py39", "py310"]

[tool.ruff]
lint.ignore = [
    "E501",  # Never enforce `E501` (line length violations).
]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # imported but unused
    "E402",  # Module level import not at top of file
]
"tests/*" = [
    "F401",  # imported but unused
    "F403",  # star imports
    "F841",  # unused variables
    "E711",  # comparison to None
    "E721",  # type comparison
]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial"
]
testpaths = ["tests"]
addopts = "--cov=alinemol --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.uv]
# Configure PyTorch index for CPU-only installation (default)
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]